# whisper-tools

./: LICENSE  README.md  main.py  mise.toml  pyproject.toml
